# files_rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: config.rs  main.rs  response.rs  routes.rs  storage.rs
src/handlers/: download.rs  files.rs  frontend.rs  mod.rs  static_files.rs  upload.rs
src/models/: file_info.rs  files.rs  mod.rs
src/services/: mod.rs
src/utils/: filename.rs  mod.rs
static/: index.html
static/css/: app.css
static/js/: app.js
