[package]
name = "LocalFiles"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.89", features = ["http1", "http2", "rustls", "server", "logging", "cors", "serve-static"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
multer = "3"
futures-util = "0.3"
bytes = "1"
tracing-subscriber = "0.3"
log = "0.4.29"
