[package]
name = "LocalFiles"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.92.2", features = ["cors","serve-static"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
rust-embed = "8.5"
mime_guess = "2.0"
json5 = "1.3.1"